--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>About</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ullam repudiandae sequi minus in modi sapiente sit aliquam, doloremque, molestiae aliquid itaque pariatur praesentium atque officia saepe? Tempora, ea iste.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ullam repudiandae sequi minus in modi sapiente sit aliquam, doloremque, molestiae aliquid itaque pariatur praesentium atque officia saepe? Tempora, ea iste.</p>
-    
+    <input type="button" value="Press">
     </div>
 
     <div id="ControlContent">
